--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,19 @@
 <% include ./partials/header %>
 
-<h1>Login Form goes here</h1>
+<h1 class="text-center">Sign In</h1>
+
+<div class="container">
+    <form action="/login" method="POST" class="border border-dark p-4">
+        <div class="form-group">
+            <input type="email" name="loginInfo[email]" class="form-control" placeholder="Enter your Email" autofocus required>
+        </div>
+        <div class="form-group">
+            <input type="password" name="loginInfo[password]" class="form-control" placeholder="Enter your Password" required>
+        </div>
+        <div class="form-group">
+            <button class="btn btn-lg btn-outline-success form-control py-0">Submit</button>
+        </div>
+    </form>
+</div>
 
 <% include ./partials/footer %>
