--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -5,7 +5,7 @@
         <div class="col-md-1 col-lg-2 col-xl-3"></div>
         <div class="col-md-10 col-lg-8 col-xl-6">
             <form action="/register" method="POST">
-                <div class="heading-2 text-center mt-3">JOIN</div>
+                <div class="heading-2 text-center mt-3">JOIN NOW</div>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
