--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music</title>
     <link rel="stylesheet" href="/styles/landing.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/scripts/landing.js"></script>
 </head>
 <body>
     <!-- navbar -->
@@ -32,6 +34,36 @@
 
     <!-- on scroll section -->
     <pre>
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
+        CONTENT
         CONTENT
         CONTENT
         CONTENT
