--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -4,6 +4,21 @@
     font-family: 'Montserrat', sans-serif !important;
 }
 
+.heading-1 {
+    font-weight: 300;
+    font-size: 2.5rem;
+}
+
+.heading-2 {
+    font-weight: 300;
+    font-size: 2rem;
+}
+
+.heading-3 {
+    font-weight: 300;
+    font-size: 1.5rem;
+}
+
 .navbar-light {
     background-color: #fff !important;
     box-shadow: 0px 1px #ccc;
