--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -15,7 +15,7 @@
         <div class="nav-head">MUSIC</div>
         <ul class="nav-items">
             <% if (user) { %>
-                <a href="#"><%= user.firstname %></a>
+                <a href="#"><%= user.name %></a>
                 <a href="/logout">Logout</a>
             <% } else { %>
                 <a href="/login">Login</a>
