--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
                     <ul class="navbar-nav">
                         <% if (user) { %>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#"><%= user.firstname %></a>
+                                <a class="nav-link active" href="#"><%= user.name %></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/logout">Logout</a>
