--- a/views/songs/edit.ejs
+++ b/views/songs/edit.ejs
@@ -1,1 +1,29 @@
-<h1>Render edit song form here</h1>
+<% include ../partials/header %>
+
+<div class="container mt-3 text-dark">
+    <div class="row">
+        <div class="col-md-1 col-lg-2 col-xl-3"></div>
+        <div class="col-md-10 col-lg-8 col-xl-6">
+            <div class="heading-2 text-center mt-3">Edit Song Info</div>
+            <form action="/songs/<%= song.filename %>?_method=PUT" method="POST">
+                <% include ../partials/messages %>
+                <div class="form-group">
+                    <label for="artist">Artist</label>
+                    <input type="text" class="form-control" id="artist" value="<%= song.artist %>" name="artist" required>
+                </div>
+                <div class="form-group">
+                    <label for="genre">Genre</label>
+                    <input type="text" class="form-control" id="genre" value="<%= song.genre %>" name="genre" required>
+                </div>
+                <div class="form-group">
+                    <label for="year">Year</label>
+                    <input type="number" class="form-control" id="year" value="<%= song.year %>" name="year" required>
+                </div>
+                <button type="submit" class="btn btn-outline-dark pl-4 pr-4">Update Song Info</button>
+            </form>
+        </div>
+        <div class="col-md-1 col-lg-2 col-xl-3"></div>
+    </div>
+</div>
+
+<% include ../partials/footer %>
