--- a/views/songs/new.ejs
+++ b/views/songs/new.ejs
@@ -1,1 +1,33 @@
-<h1>Render new song form here</h1>
+<% include ../partials/header %>
+
+<div class="container mt-3 text-dark">
+    <div class="row">
+        <div class="col-md-1 col-lg-2 col-xl-3"></div>
+        <div class="col-md-10 col-lg-8 col-xl-6">
+            <div class="heading-2 text-center mt-3">Add a new Song</div>
+            <form action="/songs" method="POST" enctype="multipart/form-data">
+                <% include ../partials/messages %>
+                <div class="custom-file my-3">
+                    <input type="file" name="file" id="file" class="custom-file-input">
+                    <label for="file" class="custom-file-label">Choose File</label>
+                </div>
+                <div class="form-group">
+                    <label for="artist">Artist</label>
+                    <input type="text" class="form-control" id="artist" placeholder="Song Artist(s)" name="artist" required>
+                </div>
+                <div class="form-group">
+                    <label for="genre">Genre</label>
+                    <input type="text" class="form-control" id="genre" placeholder="Genre" name="genre" required>
+                </div>
+                <div class="form-group">
+                    <label for="year">Year</label>
+                    <input type="number" class="form-control" id="year" placeholder="Year" name="year" required>
+                </div>
+                <button type="submit" class="btn btn-outline-dark pl-4 pr-4">Upload!</button>
+            </form>
+        </div>
+        <div class="col-md-1 col-lg-2 col-xl-3"></div>
+    </div>
+</div>
+
+<% include ../partials/footer %>
