--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
 
 html, body {
     width: 100%;
@@ -8,7 +8,7 @@ html, body {
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif !important;
+    font-family: 'PT Sans', sans-serif !important;
     color: #fff !important;
 }
 
@@ -19,6 +19,7 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     position: fixed;
+    transition: all 0.2s;
 }
 
 .nav-head {
