--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -13,11 +13,12 @@
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter Email" name="email" value="<%= typeof email != 'undefined' ? email : '' %>">
+                    <input type="text" class="form-control" id="email" placeholder="Enter Email" name="email" value="<%= typeof email != 'undefined' ? email : '' %>">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password" value="<%= typeof password != 'undefined' ? password : '' %>">
+                    <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password"
+                        value="<%= typeof password != 'undefined' ? password : '' %>">
                 </div>
                 <div class="form-group">
                     <input type="password" class="form-control" placeholder="Confirm Password" name="password2" value="<%= typeof password2 != 'undefined' ? password2 : '' %>">
@@ -30,4 +31,4 @@
     </div>
 </div>
 
-<% include ../partials/footer %> 
+<% include ../partials/footer %>
