--- a/views/songs/edit.ejs
+++ b/views/songs/edit.ejs
@@ -4,12 +4,13 @@
     <div class="row">
         <div class="col-md-1 col-lg-2 col-xl-3"></div>
         <div class="col-md-10 col-lg-8 col-xl-6">
-            <div class="heading-2 text-center mt-3">Edit Song Info</div>
+            <div class="heading-2 text-center mt-3">EDIT SONG INFO</div>
             <form action="/songs/<%= song.filename %>?_method=PUT" method="POST">
                 <% include ../partials/messages %>
                 <div class="form-group">
                     <label for="artist">Artist</label>
-                    <input type="text" class="form-control" id="artist" value="<%= song.artist %>" name="artist" required>
+                    <input type="text" class="form-control" id="artist" value="<%= song.artist %>" name="artist"
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="genre">Genre</label>
