--- a/views/songs/new.ejs
+++ b/views/songs/new.ejs
@@ -4,30 +4,80 @@
     <div class="row">
         <div class="col-md-1 col-lg-2 col-xl-3"></div>
         <div class="col-md-10 col-lg-8 col-xl-6">
-            <div class="heading-2 text-center mt-3">Add a new Song</div>
-            <form action="/songs" method="POST" enctype="multipart/form-data">
-                <% include ../partials/messages %>
+            <div class="heading-2 text-center mt-3">ADD NEW SONG</div>
+            <form action="/songs" method="POST" enctype="multipart/form-data" id="myForm">
+
+                <!-- errors -->
+                <div class="alert alert-warning alert-dismissible fade show empty" style="display: none;" role="alert">
+                    Please enter all fields
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="alert alert-warning alert-dismissible fade show song-empty" style="display: none;" role="alert">
+                    Please choose a song
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <!-- form -->
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name" value="<%= typeof name != 'undefined' ? name : '' %>">
+                </div>
                 <div class="custom-file my-3">
                     <input type="file" name="file" id="file" class="custom-file-input">
-                    <label for="file" class="custom-file-label">Choose File</label>
+                    <label for="file" class="custom-file-label">Choose Song</label>
                 </div>
                 <div class="form-group">
                     <label for="artist">Artist</label>
-                    <input type="text" class="form-control" id="artist" placeholder="Song Artist(s)" name="artist" required>
+                    <input type="text" class="form-control" id="artist" placeholder="Enter Artist(s)" name="artist"
+                        value="<%= typeof artist != 'undefined' ? artist : '' %>">
                 </div>
                 <div class="form-group">
                     <label for="genre">Genre</label>
-                    <input type="text" class="form-control" id="genre" placeholder="Genre" name="genre" required>
+                    <input type="text" class="form-control" id="genre" placeholder="Enter Genre" name="genre" value="<%= typeof genre != 'undefined' ? genre : '' %>">
                 </div>
                 <div class="form-group">
                     <label for="year">Year</label>
-                    <input type="number" class="form-control" id="year" placeholder="Year" name="year" required>
+                    <input type="number" class="form-control" id="year" placeholder="Enter Year" name="year" value="<%= typeof year != 'undefined' ? year : '' %>">
                 </div>
-                <button type="submit" class="btn btn-outline-dark pl-4 pr-4">Upload!</button>
+                <div class="btn btn-outline-dark pl-4 pr-4 submit">Upload</div>
             </form>
         </div>
         <div class="col-md-1 col-lg-2 col-xl-3"></div>
     </div>
 </div>
+
+<script>
+    (() => {
+        document.querySelector(".submit").addEventListener("click", () => {
+            const errors = [];
+
+            if (!document.getElementById("name").value ||
+                !document.getElementById("artist").value ||
+                !document.getElementById("genre").value ||
+                !document.getElementById("year").value)
+                errors[0] = 1;
+
+            if (!document.getElementById("file").value)
+                errors[1] = 2;
+
+            if (errors.length > 0) {
+                if (errors[0] === 1)
+                    document.querySelector(".empty").style.display = "block";
+                else
+                    document.querySelector(".empty").style.display = "none";
+
+                if (errors[1] === 2)
+                    document.querySelector(".song-empty").style.display = "block";
+                else
+                    document.querySelector(".song-empty").style.display = "none";
+            } else
+                document.getElementById("myForm").submit();
+        });
+    })();
+</script>
 
 <% include ../partials/footer %>
