--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -19,3 +19,37 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+/* song styles */
+.song-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.song-container img {
+    width: 100%;
+}
+
+.song-container div {
+    padding-left: 15px;
+}
+
+.song-container:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.player {
+    width:100%;
+    margin-top: 50px;
+}
+
+audio {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+}
