--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,25 +15,42 @@
 
 <!-- Recently played -->
 <div class="jumbotron songs-item pl-md-5 pr-md-5">
-    <div class="heading-3">
+    <div class="heading-3 pb-4">
         Recently Played
     </div>
 </div>
 
 <!-- Favourites -->
 <div class="jumbotron songs-item pl-md-5 pr-md-5">
-    <div class="heading-3">
+    <div class="heading-3 pb-4">
         Favourites
     </div>
+    <div class="row"></div>
 </div>
 
 <!-- All Songs -->
 <div class="jumbotron songs-item pl-md-5 pr-md-5">
-    <div class="heading-3">
+    <div class="heading-3 pb-4">
         Songs
     </div>
+    <div class="row" id="songs"></div>
 </div>
 
-<% include ./partials/footer%>
+<!-- player -->
+<div class="player">
+    <audio controls src="">Some Error Occured</audio>
+</div>
+
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="scripts/home.js"></script>
+</body>
+
+</html>
