--- a/views/songs/new.ejs
+++ b/views/songs/new.ejs
@@ -27,7 +27,7 @@
                     <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name" value="<%= typeof name != 'undefined' ? name : '' %>">
                 </div>
                 <div class="custom-file my-3">
-                    <input type="file" name="file" id="file" class="custom-file-input">
+                    <input type="file" name="file" id="file" class="custom-file-input" accept=".mp3">
                     <label for="file" class="custom-file-label">Choose Song</label>
                 </div>
                 <div class="form-group">
