Use Howler.js instead of HTML audio

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,11 @@
 
 <!-- player -->
 <div class="player">
-    <audio controls src="">Some Error Occured</audio>
+    <button id="howler-play">Play</button>
+    <button id="howler-pause">Pause</button>
+    <button id="howler-stop">Stop</button>
+    <button id="howler-volup">Vol+</button>
+    <button id="howler-voldown">Vol-</button>
 </div>
 
 </div>
@@ -50,6 +54,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.min.js"></script>
 <script type="text/javascript" src="scripts/home.js"></script>
 </body>
 
